k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tekton-demo-app
  labels:
    app: tekton-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tekton-demo
  template:
    metadata:
      labels:
        app: tekton-demo
    spec:
      containers:
        - name: web
          image: image-registry.openshift-image-registry.svc:5000/pipelines-demo/tekton-demo-app:latest
          ports:
            - containerPort: 80
