k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-app
  namespace: demo-app
spec:
  to: { kind: Service, name: hello-app }
  port: { targetPort: 8080 }
